[gd_scene load_steps=2 format=3 uid="uid://b0ssua4jmjypl"]

[ext_resource type="Script" path="res://Scripts/game.gd" id="1_j1ah7"]

[node name="Game" type="Node2D"]
script = ExtResource("1_j1ah7")

[node name="Button" type="Button" parent="."]
offset_left = 38.0
offset_top = 38.0
offset_right = 160.0
offset_bottom = 93.0
text = "Main Menu"

[node name="Energy_button" type="Button" parent="."]
offset_left = 308.0
offset_top = 268.0
offset_right = 838.0
offset_bottom = 805.0
theme_override_font_sizes/font_size = 50
text = "(Energy Picture)"

[node name="Show_Energy" type="Label" parent="."]
offset_left = 309.0
offset_top = 9.0
offset_right = 822.0
offset_bottom = 83.0
theme_override_font_sizes/font_size = 50
text = "Energy: 0"

[node name="Show_EPC" type="Label" parent="."]
offset_left = 312.0
offset_top = 72.0
offset_right = 842.0
offset_bottom = 112.0
theme_override_font_sizes/font_size = 25
text = "Energy per click: 1"

[node name="Show_EPS" type="Label" parent="."]
offset_left = 312.0
offset_top = 106.0
offset_right = 832.0
offset_bottom = 141.0
theme_override_font_sizes/font_size = 25
text = "Energy per second: 0"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Energy_button" to="." method="_on_energy_button_pressed"]
